--- a/styles/common.css
+++ b/styles/common.css
@@ -46,7 +46,8 @@ body{
     text-align: center;
     font-size: 15px;
     background-color: blue; 
-     color:white
+     color:white;
+    
 } 
 
 
@@ -54,7 +55,7 @@ body{
     width: 100%;
     height: 100vh;
     position: relative;
-    text-align: center; 
+    margin-left: 45%;
     
 }
 
@@ -71,3 +72,4 @@ body{
     text-align: center;
     font-weight: normal;
 }
+
