--- a/styles/post.css
+++ b/styles/post.css
@@ -1,3 +1,9 @@
+body{
+    position : relative;
+     bottom:0;
+}
+
+
 .heading-content{
    text-align: center;
    font-size: 25px;
@@ -5,6 +11,50 @@
 }
 
 
-#edit-button{
+.author-name{
+    font-family: 'Courier New', Courier, monospace;
+   font-weight: bold;
+   font-size: 20px;
+}
+
+#editButton{
     float: right;
+}
+
+.post-content{
+    word-wrap: break-word;
+    margin-top: 20px;
+}
+
+#like-button{
+    margin-top: 20px;
+}
+
+
+#allCommentsHeading{
+    font-weight: bolder;
+    padding-top: 10px;
+}
+
+.comment-container{
+    min-height: 0px;
+    overflow: hidden;
+  
+}
+
+#comments{
+    background-color: lightgrey;
+    margin: 5px;
+    padding: 5px;
+}
+
+
+
+
+.comment{
+    background-color: white;
+    width: 1000px;
+    margin: 10px;
+    padding: 10px;
+    
 }
