Correcting the position of ellipsis on postlist page

--- a/styles/postslist.css
+++ b/styles/postslist.css
@@ -41,13 +41,13 @@ body{
 }
 
 .custom-card-body{
-    height: 140px;
+    height: 140px; 
     background-color: #DCDCDC;
     width: 83%;
-    padding: 8px;
+    padding: 5px;
     font-size: 12px;
     border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;   
+    border-bottom-right-radius: 20px; 
 }
 
 .card-body-heading{
@@ -61,6 +61,14 @@ body{
    
 }
 
+.post-text{
+    overflow: hidden; 
+    white-space: normal; 
+
+    height: 4.8em;  
+    text-overflow: -o-ellipsis-lastline; 
+}
+
 .trash-button{
     float: right;
     padding-right: 10px;
@@ -69,19 +77,17 @@ body{
 }
 
 .ellipsis{
-    margin-left: 370px;
+   margin-left: 370px;
+   color: grey;
     cursor: pointer;
-    float:right;
-    padding-top: 6px;
+    padding-right: 120px;
+    margin-bottom: 1px; 
+ 
   
 }
 
 
-/*.container {
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-grid-gap: 20px; 
-} */
+
 
 
 
