Adjusting background image in index.html

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,14 +1,17 @@
+html, body{
+    height : 100%;
+}
+
 .common-body{
-    background-image: url(../images/background.jpg);
-    width: auto;
-     /* Full height */
-  height: 100%;
-  /* Center and scale the image nicely */
-  
+  background-image: url(../images/background.jpg);
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center ;
-  
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  min-width : 100%;
+  min-height: 100%;
 }
 
 .header-class{
